[gd_scene load_steps=7 format=2]

[ext_resource path="res://Actors/Weapon.gd" type="Script" id=1]
[ext_resource path="res://Bullet.tscn" type="PackedScene" id=2]
[ext_resource path="res://assets/gun.png" type="Texture" id=3]
[ext_resource path="res://assets/muzzleflash.png" type="Texture" id=4]
[ext_resource path="res://assets/artillary.wav" type="AudioStream" id=5]

[sub_resource type="Animation" id=1]
resource_name = "MuzzleFlash"
length = 0.15
tracks/0/type = "value"
tracks/0/path = NodePath("MuzzleFlash:scale")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Vector2( 1, 1 ), Vector2( 0.5, 1.5 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("MuzzleFlash:visible")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.1 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ true, false ]
}

[node name="Weapon" type="Node2D"]
script = ExtResource( 1 )
Bullet = ExtResource( 2 )

[node name="Gun" type="Sprite" parent="."]
rotation = 1.5708
texture = ExtResource( 3 )
offset = Vector2( 0, -20 )

[node name="EndOfGun" type="Position2D" parent="."]
position = Vector2( 84.6246, 0 )

[node name="GunDirection" type="Position2D" parent="."]
position = Vector2( 101.583, 0 )

[node name="AttackCooldown" type="Timer" parent="."]
wait_time = 0.3
one_shot = true

[node name="MuzzleFlash" type="Sprite" parent="."]
visible = false
position = Vector2( 87.3724, 0.166855 )
rotation = 1.5708
scale = Vector2( 0.5, 1.5 )
texture = ExtResource( 4 )

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
anims/MuzzleFlash = SubResource( 1 )

[node name="ArtillaryFire" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource( 5 )
volume_db = 6.0
